# text2synth

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
src/text2synth/: mcp_server.py  patch.py  state.py  synths.py
tests/: pad.prm  test_mcp_server.py  test_state.py
