[project]
name = "text2synth"
version = "0.1.0"
description = "Text2synth, a POC to program a synth sound from text"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "mido>=1.3.3",
    "pydantic>=2.11.10",
    "pydantic-ai-slim[anthropic]>=1.0.15",
    "pytest>=8.4.2",
    "python-rtmidi>=1.5.8",
]


[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
addopts = "--cov=text2synth --cov-report=term-missing --cov-branch"
