[project]
name = "text2synth"
description = "Text2synth, a POC to program a synth sound from text"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "David Cournapeau", email = "cournape@gmail.com" }
]
dependencies = [
    "mido>=1.3.3",
    "pydantic>=2.11.10",
    "pydantic-ai-slim[anthropic]>=1.0.15",
    "pytest>=8.4.2",
    "python-rtmidi>=1.5.8",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/text2synth/_version.py"

[dependency-groups]
dev = [
    "ipython>=9",
    { include-group = "test" },
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
addopts = "--cov=text2synth --cov-report=term-missing --cov-branch"
